Add support for S3 compliant endpoints

--- a/etc/conf/server.properties
+++ b/etc/conf/server.properties
@@ -19,15 +19,16 @@ server.redirect-port=
 #storage-root.models=s3://my-s3-bucket/root
 #storage-root.models=abfs://file_system@account_name.dfs.core.windows.net/root
 #storage-root.models=gs://my-gc-bucket/root
-storage-root.models=file:/tmp/ucroot
+storage-root.models=s3://datalake/
 
 ## S3 Storage Config (Multiple configs can be added by incrementing the index)
-s3.bucketPath.0=
-s3.region.0=
+s3.bucketPath.0=s3://datalake/
+s3.region.0=us-east-1
+s3.endpoint.0=http://s3.gaia.local
 s3.awsRoleArn.0=
 # Optional (If blank, it will use DefaultCredentialsProviderChain)
-s3.accessKey.0=
-s3.secretKey.0=
+s3.accessKey.0=BGCB4FCWN6QAMDDIUINZ
+s3.secretKey.0=4W4YFlASqV9cZXIr604BtD0Z4pjqaFmYC7RIByxR
 # Test Only (If you provide a session token, it will just use those session creds, no downscoping)
 s3.sessionToken.0=
 
